# PhotoPainter

./: .gitignore  DESIGN.md  GOOGLE_CREDENTIALS.md  LESSONS_LEARNED.md  LICENSE  PLAID_CREDENTIALS.md  README.md  TELLER_CREDENTIALS.md  extra_scripts.py  platformio.ini
firmware/include/: config.h.example  version.h
firmware/src/: main.cpp
scratch/: platformio.ini
server/: Cargo.toml  build.rs  stock_tickers.txt
server/src/: font.rs  image.rs  main.rs  nws_cache.rs  plaid_creds.rs  renderer.rs  teller_creds.rs
server/src/modules/: bank.rs  battery.rs  clock.rs  gcal.rs  icon_matrix.rs  mod.rs  rain.rs  stock.rs  weather.rs
src/: main.cpp
