[package]
name = "photopainter-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "photopainter-server"
path = "src/main.rs"

[dependencies]
fontdue = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
sha2 = "0.10"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.5", features = ["trace"] }
